Finished CPD report

--- a/CPD report.tex
+++ b/CPD report.tex
@@ -23,21 +23,26 @@ In this paper I will discuss five key skills, taken from my continuing professio
 
 \section {Understanding and remembering code}
 
+I find that when I am learning new code in class for the first time, I become very confused and frustrated, which makes me just give up and stop trying to understand it, when i do eventually understand code I can never remember it, meaning I have to open previous programs in which I have used the code, and transfer it to the new program. This is important to improve on, as it takes me longer to programme than it should, and it also means I have to search online what has already been covered in class. In a professional AAA studio, this could result in deadlines being missed, and the game release date being pushed back. I plan to improve on this, by asking the tutor in lesson questions to better understand what the code does, and if I still don't understand, arrange a tutor meeting to go through it in detail. To remember code, I will start an alphabetical diary, this will make looking up code quicker, also just writing it down helps me store it into memory faster. I will stick to this plan through the spring term, and hopefully see improvement.
 
 \section {Presentations}
 
+I try to avoid presentations at all cost, when I have to do them I become very nervous, shaky, nauseous, breathless, faint and forget all my words. I think the main reasons for this is a lack of confidence, and the fact I haven't presented anything in six years. The course involves a lot of presentations, which means I could lose a number of marks if I present badly or not at all. In a professional studio this lack of confidence might mean I am not able to say if something is wrong, or show my work to others. Even though presentations make me nervous, the more I do hopefully the better I should become at presenting. Also practising them beforehand in front of a friend or tutor might make it easier, though it is quite different in a room full of people. I expect this to take a long time to master, but by the end of the year I should be significantly better than I am now.
 
 \section{Time management}
 
+Even though I have managed to hand every assignment in on time so far, I always leave them to the last week, or in the case of comp110 worksheets, in which I have a week to complete, I leave it to the day before it is due in. This is especially true for the assignments I find more difficult, I put them off and cannot bring myself to start, because I know it is going to be hard. Then I run out of time for them to be checked by my tutors before the official hand in, therefore I get marked down for easily correctable mistakes. If I was working on a AAA game where the work is continuous until the game is completed, I could be fired for not working hard enough, or not doing what I was told in a timely fashion. To improve my time management I need to stop leaving my assignments to the last minute, by starting them as soon as possible, and make frequent pull requests to make sure I'm making the best of the given time. I will make an effort to do this from the beginning of the spring term onwards.
 
 \section{Independant study}
 
+After lessons my studying ends, when I should be doing an extra few hours of independent study every day, to further my knowledge of programming and the games industry, I play games as often as I can, but I do not do any other reading, or practise programming unless it is for an assignment. This would probably help with my understanding and remembering of code, making me less frustrated in class, also decreasing the time it takes me to problem solve and finish assignments. In a game studio all work is independent; even though you work in teams everyone is responsible for their own part. To improve this skill I will have to set aside a few hours every weekday to practise programming, or read relevant articles or videos. I will start this as soon as possible through the winter break, owing to the fact that it should be relatively easy when there are no assignments due.
 
 \section{Spelling and punctuation}
 
+My dyslexia makes spelling and punctuation very hard to remember, I did not learn how to use puctuation properly in school, and I still don't know how to use it now, no matter how many times comers are explained to me with examples, I find it hard extremely hard to apply it to my own writing. Spelling is especially frustrating, as some days I forget how to spell the small everyday words, and others I spell wrong no matter how many times I have used it that day, I avoid new or complicated words, which makes my writing seem unprofessional, and probably effects the marks I receive on written work. In programming there are specific names for functions (e.g. collision), that I would find difficult to spell or remember, but are used every day in a professional studio, this would lead me to becoming easily confused, and misunderstanding what I am being told to do. I am currently working on this with my dyslexia tutor, I am also starting to keep a diary of words I find difficult, and learn a new word every week, additionally I check my written work three times to make sure it makes sense, spelling and punctuation, my dyslexia tutor also checks it when she can. This will take a long time to improve, but it should get easier each week, though some days are better than others.
 
 \section{Conclusion}
 
-
+Most of the key skills I have chosen, will take a long time for me to master, especially understanding and remembering code, also spelling and punctuation, but they all require determination that will eventually push me towards my career goal, if I work on these skills they will help me in class, to understand everything, communicate well during assignments, with my peers, tutors and make me sound more professional.
 
 \end{document}
