Changed titles to be a bit more specific, and a few more sentences

--- a/CPD report.tex
+++ b/CPD report.tex
@@ -21,15 +21,15 @@
 
 In this paper I will discuss five key skills, taken from my continuing professional development report that I need to improve on to succeed on my course. Also by using SMART targets as a guide, I will first state the skill, and why it is important to increase my ability, not just for my course, but in terms of my future career as well. Secondly how I plan to improve that skill and how long I expect it to take me to reach my goals.
 
-\section {Understanding and remembering code}
+\section {Reading and remembering code}
 
-I find that when I am learning new code in class for the first time, I become very confused and frustrated, which makes me just give up and stop trying to understand it, when i do eventually understand code I can never remember it, meaning I have to open previous programs in which I have used the code, and transfer it to the new program. This is important to improve on, as it takes me longer to programme than it should, and it also means I have to search online what has already been covered in class. In a professional AAA studio, this could result in deadlines being missed, and the game release date being pushed back. I plan to improve on this, by asking the tutor in lesson questions to better understand what the code does, and if I still don't understand, arrange a tutor meeting to go through it in detail. To remember code, I will start an alphabetical diary, this will make looking up code quicker, also just writing it down helps me store it into memory faster. I will stick to this plan through the spring term, and hopefully see improvement.
+I find that when I am learning new code in class for the first time, I become very confused and frustrated, which makes me just give up and stop trying to understand it, when i do eventually understand code I can never remember it, meaning I have to open previous programs in which I have used the code, and transfer it to the new program. This is important to improve on, as it takes me longer to programme than it should, and it also means I have to search online what has already been covered in class. In a professional AAA studio, this could result in deadlines being missed, and the game release date being pushed back. I plan to improve on this, by asking the tutor in lesson questions to better understand what the code does, and if I still don't understand, arrange a tutor meeting to go through it in detail, I could also test myself by predicting the output of code before playing, this could help me identify fuctions and there given output. To remember code, I will start an alphabetical diary, this will make looking up code quicker, also just writing it down helps me store it into memory faster. I will stick to this plan through the spring term, and hopefully see improvement.
 
 \section {Presentations}
 
-I try to avoid presentations at all cost, when I have to do them I become very nervous, shaky, nauseous, breathless, faint and forget all my words. I think the main reasons for this is a lack of confidence, and the fact I haven't presented anything in six years. The course involves a lot of presentations, which means I could lose a number of marks if I present badly or not at all. In a professional studio this lack of confidence might mean I am not able to say if something is wrong, or show my work to others. Even though presentations make me nervous, the more I do hopefully the better I should become at presenting. Also practising them beforehand in front of a friend or tutor might make it easier, though it is quite different in a room full of people. I expect this to take a long time to master, but by the end of the year I should be significantly better than I am now.
+I try to avoid presentations at all cost, when I have to do them I become very nervous, shaky, nauseous, breathless, faint and forget all my words. I think the main reasons for this is a lack of confidence, and the fact I haven't presented anything in six years. The course involves a lot of presentations, which means I could lose a number of marks if I present badly or not at all. In a professional studio this lack of confidence might mean I am not able to say if something is wrong, or show my work to others. Even though presentations make me nervous, the more I do hopefully the better I should become at presenting. Also practising them beforehand in front of a friend, tutor or camera might make it easier, though it is quite different in a room full of people. I expect this to take a long time to master, but by the end of the year I should be significantly better than I am now.
 
-\section{Time management}
+\section{Assignment time management}
 
 Even though I have managed to hand every assignment in on time so far, I always leave them to the last week, or in the case of comp110 worksheets, in which I have a week to complete, I leave it to the day before it is due in. This is especially true for the assignments I find more difficult, I put them off and cannot bring myself to start, because I know it is going to be hard. Then I run out of time for them to be checked by my tutors before the official hand in, therefore I get marked down for easily correctable mistakes. If I was working on a AAA game where the work is continuous until the game is completed, I could be fired for not working hard enough, or not doing what I was told in a timely fashion. To improve my time management I need to stop leaving my assignments to the last minute, by starting them as soon as possible, and make frequent pull requests to make sure I'm making the best of the given time. I will make an effort to do this from the beginning of the spring term onwards.
 
